# Gamificacion

./: CMakeLists.txt  Player.cpp  Player.h  PuertaUni.h  aulakantscene.cpp  aulakantscene.h  caminouni.cpp  caminouni.h  game.cpp  game.h  grafos.cpp  grafos.h  juegoarte.cpp  juegoarte.h  juegociencia.cpp  juegociencia.h  juegohistoria.cpp  juegohistoria.h  juegopolitica.cpp  juegopolitica.h  labdescartes.cpp  labdescartes.h  mapa.cpp  mapa.h  menupartidadialog.cpp  menupartidadialog.h  npcbatalla.cpp  npcbatalla.h  playerstats.cpp  playerstats.h  puertajuegohistoria.cpp  puertajuegohistoria.h  puertauni.cpp  ruletascene.cpp  ruletascene.h  runningman.cpp  runningman.h  scenebase.cpp  scenebase.h  scenebatalla.cpp  (+25 more)
Empirista/: submesaenumeracion.cpp  submesaenumeracion.h
Objects/: desktop.ini
